<resources>
    <string name="app_name" translatable="false">ShareApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_data_to_next">Send data to next activity</string>
    <string name="share">Share</string>
    <string name="recycler_view">Recycle View Demo</string>
    <string name="button_was_clicked">Button was clicked</string>

</resources>